--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-partials": "^0.3.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "package.json": "^2.0.1"
   }
 }
